force-app/main/default/objects/Visit__c/fields/Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Days__c</fullName>
    <formula>Now() - Appointment_Datetime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>