force-app/main/default/objects/Visit__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Appointment associated with this Visit.</description>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipName>Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>