force-app/main/default/objects/Visit__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <formula>Appointment__r.Schedule__r.Center__r.Name</formula>
    <label>Center</label>
    <type>Text</type>
</CustomField>