force-app/main/default/objects/Visit__c/fields/Center_Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Center_Donation_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Center Donation Type associated with this Visit</description>
    <label>Center Donation Type</label>
    <referenceTo>Center_Donation_Type__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>