force-app/main/default/objects/Visit__c/fields/Check_In__c.field-meta.xml
<CustomField>
    <fullName>Check_In__c</fullName>
    <description>Datetime from BECS for a Donor check in</description>
    <label>Check In</label>
    <type>DateTime</type>
</CustomField>