force-app/main/default/objects/Visit__c/fields/Collection_Device_ID__c.field-meta.xml
<CustomField>
    <fullName>Collection_Device_ID__c</fullName>
    <description>Unique BECS device identifier (serial number)</description>
    <inlineHelpText>Unique BECS device identifier (serial number)</inlineHelpText>
    <label>Collection Device ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>