force-app/main/default/objects/Visit__c/fields/Collection_Number__c.field-meta.xml
<CustomField>
    <fullName>Collection_Number__c</fullName>
    <description>Upon a donation complete event, the collection number received from BECs.</description>
    <inlineHelpText>Upon a donation complete event, the collection number received from BECs.</inlineHelpText>
    <label>Collection Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>