force-app/main/default/objects/Visit__c/fields/CSAT_Feedback__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Feedback__c</fullName>
    <description>Written text from the donor about their experience.</description>
    <inlineHelpText>Written text from the donor about their experience.</inlineHelpText>
    <label>CSAT Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>