force-app/main/default/objects/Visit__c/fields/CSAT_Rating__c.field-meta.xml
<CustomField>
    <fullName>CSAT_Rating__c</fullName>
    <description>Indicates the CSAT rating for this visit.</description>
    <inlineHelpText>Indicates the CSAT rating for this visit.</inlineHelpText>
    <label>CSAT Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>