force-app/main/default/objects/Visit__c/fields/Cycle_Time__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time__c</fullName>
    <description>(Minutes) Indicates the Donation Complete time minus the Check in time, to show the end-to-end visit cycle time.</description>
    <formula>IF(Donation_Complete__c &gt; Check_In__c, (DATETIMEVALUE(Donation_Complete__c) -  DATETIMEVALUE(Check_In__c)) * 24 * 60,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DATETIMEVALUE(</inlineHelpText>
    <label>Cycle Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>