force-app/main/default/objects/Visit__c/fields/Donation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Donation_Complete__c</fullName>
    <description>Datetime that BECS concludes the donation; when payment can be made.</description>
    <label>Donation Complete</label>
    <type>DateTime</type>
</CustomField>