force-app/main/default/objects/Visit__c/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The type of donation for this Visit</description>
    <label>Donation Type</label>
    <referenceTo>Donation_Type__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>