force-app/main/default/objects/Visit__c/fields/Donation_Volume__c.field-meta.xml
<CustomField>
    <fullName>Donation_Volume__c</fullName>
    <description>Donation in cc</description>
    <label>Donation Volume</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>