force-app/main/default/objects/Visit__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Donor associated with this Visit.</description>
    <label>Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>