force-app/main/default/objects/Visit__c/fields/in32DayWindow__c.field-meta.xml
<CustomField>
    <fullName>in32DayWindow__c</fullName>
    <formula>IF ( (NOW() - Appointment_Datetime__c) &lt; 32, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>in32DayWindow</label>
    <type>Checkbox</type>
</CustomField>