force-app/main/default/objects/Visit__c/fields/in365DayWindow__c.field-meta.xml
<CustomField>
    <fullName>in365DayWindow__c</fullName>
    <formula>IF ( (NOW() - Appointment_Datetime__c) &lt; 365, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>in365DayWindow</label>
    <type>Checkbox</type>
</CustomField>