force-app/main/default/objects/Visit__c/fields/isFirstVisit__c.field-meta.xml
<CustomField>
    <fullName>isFirstVisit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this Visit is the first for a donor</description>
    <label>First Visit?</label>
    <type>Checkbox</type>
</CustomField>