force-app/main/default/objects/Visit__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>The result of the Visit</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>