force-app/main/default/objects/Visit__c/fields/Physical_Exam__c.field-meta.xml
<CustomField>
    <fullName>Physical_Exam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a physical exam is due for a donor.</description>
    <inlineHelpText>Indicates whether a physical exam is due for a donor.</inlineHelpText>
    <label>Physical Exam?</label>
    <type>Checkbox</type>
</CustomField>