force-app/main/default/objects/Visit__c/fields/Previous_Donation__c.field-meta.xml
<CustomField>
    <fullName>Previous_Donation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The previous Visit that was donation Complete</description>
    <inlineHelpText>The previous Visit that was a successful Donation</inlineHelpText>
    <label>Previous Donation</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Visit__c.Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filterItems>
        <filterItems>
            <field>Visit__c.Donation_Volume__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Visits (Previous Donation)</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>