force-app/main/default/objects/Visit__c/fields/Rescheduled_Visit__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This refers to the new Visit created when an existing Visit is rescheduled.</description>
    <label>Rescheduled Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Rescheduled Visits</relationshipLabel>
    <relationshipName>Rescheduled_Visit</relationshipName>
    <type>Lookup</type>
</CustomField>