force-app/main/default/objects/Visit__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <formula>Appointment__r.Schedule__r.Name</formula>
    <label>Schedule</label>
    <type>Text</type>
</CustomField>