force-app/main/default/objects/Visit__c/fields/SPE_Analysis__c.field-meta.xml
<CustomField>
    <fullName>SPE_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an SPE analysis is due for a donor.</description>
    <inlineHelpText>Indicates whether an SPE analysis is due for a donor.</inlineHelpText>
    <label>SPE Analysis?</label>
    <type>Checkbox</type>
</CustomField>