force-app/main/default/objects/Visit__c/fields/Total_Special_Notes__c.field-meta.xml
<CustomField>
    <fullName>Total_Special_Notes__c</fullName>
    <description>Total number of special notes (Tasks) for a Visit</description>
    <inlineHelpText>Total number of special notes (Tasks) for a Visit</inlineHelpText>
    <label>Total Special Notes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>