force-app/main/default/objects/Visit__c/fields/Visit_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date_Time__c</fullName>
    <description>The &apos;ideal&apos; datetime for a Visit which is simply it&apos;s related Appointment slot start time.</description>
    <formula>Appointment__r.Datetime__c</formula>
    <inlineHelpText>The &apos;ideal&apos; datetime for a Visit which is simply it&apos;s related Appointment slot start time.</inlineHelpText>
    <label>Visit Date Time</label>
    <type>DateTime</type>
</CustomField>